--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fetch-hook": "^1.8.5",
+    "react-hanger": "^2.4.4",
     "react-scripts": "4.0.3",
+    "react-use": "^17.3.1",
+    "react-use-form-state": "^0.13.2",
+    "react-useportal": "^1.0.14",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
